<resources>
    <string name="app_name">Deliverable1-Group7</string>
    <string name="loginTitle">Login</string>
    <string name="usernameHint">(Enter your username)</string>
    <string name="usernameView">Username</string>
    <string name="passwordView">Password</string>
    <string name="passwordHint">(Enter your password)</string>
    <string name="enter">Enter</string>
    <string name="or">OR</string>
    <string name="createAccount">Create Account</string>
    <string name="createTitle">Create Account</string>
    <string name="emailHint">(Enter your email)</string>
    <string name="emailView">Email</string>
    <string name="serviceCreate">Create Service</string>
    <string name="serviceName">Please enter the name of the new service</string>
    <string name="serviceNameString">Serivce Name</string>
    <string name="employeeMenuString">Choose an employee to run the service</string>
    <string name="addServiceButton">ADD</string>
    <string name="servicesHere">Current Services:</string>
    <string name="updateNameHint">Enter Service Name (update)</string>
    <string name="aaa">Service Name</string>
    <string name="serviceNameHint">Enter a Service Name</string>

    <!-- Strings from activity_admin -->
    <string name="clinicAdmin">Clinic Administration</string>
    <string name="adTxt">Administrator Name:&#160;</string>
    <string name="clinicTxt">Clinic Name:&#160;</string>
    <string name="manageEmployees">Manage Employees</string>
    <string name="manClinicServices">Manage Clinic Services</string>
    <string name="records">Records</string>
    <string name="registeredPatients">Registered Patients</string>
    <string name="clinic">(CLINIC NAME)</string>
    <string name="administrator">(ADMINISTRATOR)</string>
    <string name="serviceHeader">Services</string>


</resources>
